objects/wkitsm__Log__e.object
<CustomObject>
    <description>Logs</description>
    <fields>
        <fullName>wkitsm__Callouts__c</fullName>
        <label>Callouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__CpuTime__c</fullName>
        <label>CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__Dml__c</fullName>
        <label>DML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__ErrorId__c</fullName>
        <label>Error ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionStackTrace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__HeapSize__c</fullName>
        <label>Heap Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__QueryRows__c</fullName>
        <label>Query Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__RunningUserId__c</fullName>
        <label>Running User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Soql__c</fullName>
        <label>SOQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>